# libmpc

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.sh  configure.sh
.devcontainer/: devcontainer.json  docker-compose.yml
cmake/: mpc++Config.cmake.in
cmake/modules/: CodeCoverage.cmake
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: api.rst  reference.rst
docs/source/cite/: cite.rst
docs/source/introduction/: introduction.rst
docs/source/manual/: manual.rst
examples/: CMakeLists.txt  networked_oscillators_ex.cpp  quadrotor_ex.cpp  ugv_ex.cpp  vanderpol_ex.cpp
include/mpc/: Base.hpp  Common.hpp  Constraints.hpp  Dim.hpp  IComponent.hpp  IDimensionable.hpp  IMPC.hpp  IOptimizer.hpp  Integrator.hpp  LMPC.hpp  LOptimizer.hpp  Logger.hpp  Mapping.hpp  NLMPC.hpp  NLOptimizer.hpp  Objective.hpp  ProblemBuilder.hpp  Profiler.hpp  Types.hpp  Utils.hpp  baseFunction.hpp  common.hpp  conFunction.hpp  logger.hpp  mapping.hpp  mpc.hpp  nlmpc.hpp  objFunction.hpp  optimizer.hpp  types.hpp
include/mpc/LMPC/: LOptimizer.hpp  ProblemBuilder.hpp
include/mpc/NLMPC/: Base.hpp  Constraints.hpp  Mapping.hpp  Model.hpp  NLOptimizer.hpp  Objective.hpp
misc/: benchmark.py
python/: .gitignore  CMakeLists.txt  INFO.md  build.sh  pybind_export.cpp  requirements.txt  setup.py
python/examples/: example.py  example_nl.py
test/: CMakeLists.txt  linearProblem.cpp  test_common.cpp  test_constraints.cpp  test_discrete_lti_siso.cpp  test_discrete_lti_siso.m  test_lmpc.cpp  test_logger.cpp  test_main.cpp  test_mutiple_instances.cpp  test_objective.cpp  test_profiler.cpp  test_utils.cpp  test_vanderpol.cpp  test_vanderpol.m  vanderpol.cpp
test/LMPC/: test_common.cpp  test_constraints.cpp  test_lmpc.cpp  test_mutiple_instances.cpp  test_quadrotor.cpp
test/NLMPC/: test_common.cpp  test_constraints.cpp  test_discrete_lti_siso.cpp  test_nlmpc.cpp  test_nloptimizer.cpp  test_objective.cpp  test_vanderpol.cpp
test/include/: basic.hpp
